Fixed html alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,8 +3,8 @@ label {
 }
 
 
-.container {
-}
+/* .container {
+} */
 
 .header-title {
   text-align: center;
